Изменил контактные данные в index.html, contact.html, services.html

--- a/contact.html
+++ b/contact.html
@@ -181,13 +181,13 @@
             <p><span>Aдрес:</span> Г. Алматы - Талгар</p>
           </div>
           <div class="col-md-3">
-            <p><span>Телефон:</span> <a href="tel:+77088642554">+77088642554</a></p>
+            <p><span>Телефон:</span> <a href="tel:+77717193056">+7(771)719-30-56</a></p>
           </div>
           <div class="col-md-3">
             <p><span>Email:</span> <a href="https://mail.google.com/mail/u/2/#inbox">gssgroup777@gmail.com</a></p>
           </div>
           <div class="col-md-3">
-            <p><span>Whatsapp:</span> <a href="https://wa.me/77088642554?text=Здравствуйте, меня интересует...%20">+77088642554</a></p>
+            <p><span>Whatsapp:</span> <a href="https://wa.me/+77717193057?text=Здравствуйте, меня интересует %20">+7(771)719-30-57</a></p> 
           </div>
         </div>
         <div class="row block-9">
