--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
             <h2 class="ftco-heading-2">Контактная информация</h2>
             <ul class="list-unstyled">
               <li><a href="#" class="py-2 d-block">Г. Алматы - Талгар</a></li>
-              <li><a href="tel:+77088642554" class="py-2 d-block">+77088642554</a></li>
+              <li><a href="tel:+77717193056" class="py-2 d-block">+7(771)719-30-56</a></li> 
               <li><a href="https://mail.google.com/mail/u/2/#inbox" class="py-2 d-block">gssgroup777@gmail.com</a></li>
 
             </ul>
