--- a/bed.html
+++ b/bed.html
@@ -330,21 +330,20 @@
               </ul>
             </div>
           </div>
-          <div class="col-md">
+            <div class="col-md">
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Контактная информация</h2>
               <ul class="list-unstyled">
                 <li><a href="#" class="py-2 d-block">Г. Алматы - Талгар</a></li>
-                <li><a href="tel:+77088642554" class="py-2 d-block">+77088642554</a></li>
+                <li><a href="tel:+77717193056" class="py-2 d-block">+7(771)719-30-56</a></li> 
                 <li><a href="https://mail.google.com/mail/u/2/#inbox" class="py-2 d-block">gssgroup777@gmail.com</a></li>
-
               </ul>
             </div>
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <ul class="ftco-footer-social list-unstyled float-md-right float-lft">
-                <li class="ftco-animate"><a href="https://wa.me/77088642554?text=Здравствуйте, меня интересует...%20"><span class="icon-whatsapp"></span></a></li>
+                <li class="ftco-animate"><a href="https://wa.me/+77717193057?text=Здравствуйте, меня интересует %20"><span class="icon-whatsapp"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.facebook.com/gss.group777/?ref=bookmarks"><span class="icon-facebook"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.instagram.com/gss__group/"><span class="icon-instagram"></span></a></li>
               </ul>
